# ROS

./: README.md  test.bash
install/: local_setup.sh  setup.sh
install/my_robot_sim/lib/my_robot_sim/: joy.py
install/my_robot_sim/share/ament_index/resource_index/package_run_dependencies/: my_robot_sim
install/my_robot_sim/share/my_robot_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_robot_sim/share/my_robot_sim/cmake/: my_robot_simConfig.cmake
install/my_robot_sim/share/my_robot_sim/launch/: display_robot.launch.py
install/my_robot_sim/share/my_robot_sim/rviz/: view_robot.rviz
install/my_robot_sim/share/my_robot_sim/urdf/: my_robot.urdf
install/rviz_camera_stream/share/rviz_camera_stream/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rviz_camera_stream/share/rviz_camera_stream/cmake/: rviz_camera_streamConfig.cmake
log/: latest_build
src/digital_twin/: CMakeLists.txt  package.xml
src/digital_twin/launch/: display_robot.launch.py
src/digital_twin/panels/: video_panel.py
src/digital_twin/scripts/: arm_controller.py  caring.py  emotion.py  neutral.py  surprise1.py  video_publisher.py
src/digital_twin/src/: arm_controller.py
src/digital_twin/urdf/: my_robot.urdf
src/digital_twin_torso/: CMakeLists.txt  package.xml  plugin_description.xml
src/digital_twin_torso/launch/: display_robot.launch.py
src/digital_twin_torso/scripts/: anger.py  anger1.py  emotion.py  fun.py  fun1.py  joy.py  prova.py  surprise.py
src/digital_twin_torso/src/: arm_controller.py
src/my_robot_sim/: CMakeLists.txt
src/my_robot_sim/launch/: display_robot.launch.py
src/my_robot_sim/meshes/: LCD.STL
src/my_robot_sim/rviz/: view_robot2.rviz  view_robot3.rviz
src/my_robot_sim/scripts/: anger.py  caring.py  caring1.py  emotion.py  fun.py  joy.py  joy1.py  surprise.py
src/my_robot_sim/urdf/: my_robot.urdf  my_robot.urdf.xacro
src/rviz_camera_stream/: CMakeLists.txt
src/rviz_camera_stream/include/rviz_camera_stream/: camera_display.h
src/rviz_camera_stream/launch/: demo.launch
src/rviz_camera_stream/src/: camera_display.cpp
