<package format="3">
  <name>rviz_camera_stream</name>
  <version>1.0.1</version>
  <description>
    Publish a camera view as rendered by RViz2 on an Image topic.
  </description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <author email="tbd@tbd.com">Mikhail Medvedev</author>

  <license>BSD</license>

  <url type="website">https://github.com/lucasw/rviz_camera_stream</url>

  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>


  <!-- Testing dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export plugin description for RViz2 -->
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>

